sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:9: error: type mismatch;
 found   : Int(1)
 required: Boolean
      if (plusPetit(i,j) && 1) echange(i,j);
                            ^