sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()
{
  var n = getNombreValeurs()-1;
  for (i <- 0 to n)
  {
    for (j <- 0 to i-1)
    {
      if (plusPetit(i,j) && 1) echange(i,j);
    }
  }
}